--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -d"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "flowgen": "^1.17.0",
     "lodash": "^4.17.21",
     "piscina": "^3.2.0"
