--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "declaration": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.test.ts"]
 }
